--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     </head>
     <body>
        <!-- hier zet je de code in de body tags-->
+       <h1>Hallo familie</h1>
+       <h2>Bok, Korputjes en Slijt</h2>
+       <p>Ik ben mijn eerste eigen website aan het bouwen</p>
+       <hr>
     </body>
 </html>
